--- a/tracker_spring/src/main/webapp/resources/css/ui.jqgrid.css
+++ b/tracker_spring/src/main/webapp/resources/css/ui.jqgrid.css
@@ -1,5 +1,8 @@
 /*Grid*/
-.ui-jqgrid {position: relative;}
+.ui-jqgrid {
+	position: relative;
+	margin : 0 auto;
+}
 .ui-jqgrid .ui-jqgrid-view {position: relative;left:0; top: 0; padding: 0; font-size:11px;}
 /* caption*/
 .ui-jqgrid .ui-jqgrid-titlebar {padding: .3em .2em .2em .3em; position: relative; border-left: 0 none;border-right: 0 none; border-top: 0 none;}
