--- a/tracker_spring/src/main/webapp/resources/css/ui.jqgrid.css
+++ b/tracker_spring/src/main/webapp/resources/css/ui.jqgrid.css
@@ -149,6 +149,6 @@ tr.ui-search-toolbar select {margin: 1px 0 0 0}
 .ui-jqgrid .ui-ellipsis {text-overflow:ellipsis;}
 
 /* Toolbar Search Menu */
-.ui-search-menu { position: absolute; padding: 2px 5px;}
+.ui-search-menu { position: absolute; padding: 2px 5px; margin : 0 auto;}
 .ui-jqgrid .ui-search-table { padding: 0px 0px; border: 0px none; height:20px; width:100%;}
 .ui-jqgrid .ui-search-table .ui-search-oper { width:20px; }
