--- a/tracker_new/src/main/webapp/resources/css/style.css
+++ b/tracker_new/src/main/webapp/resources/css/style.css
@@ -102,6 +102,14 @@ hr {
 /*************************
 *******Header******
 **************************/
+#header .container {
+	width: 100%;
+}
+
+#header .navbar-header {
+	margin-left: 50px;
+}
+
 .navbar-fixed-top .navbar-toggle .icon-bar {
   background-color: #fff;
 }
