--- a/tracker_new/src/main/webapp/resources/css/jquery-ui/jquery-ui.css
+++ b/tracker_new/src/main/webapp/resources/css/jquery-ui/jquery-ui.css
@@ -476,7 +476,8 @@ button.ui-button::-moz-focus-inner {
 }
 .ui-dialog {
 	overflow: hidden;
-	position: absolute;
+	position: fixed;
+	z-index: 2000;
 	top: 0;
 	left: 0;
 	padding: .2em;
