--- a/tracker_new/src/main/webapp/resources/css/style.css
+++ b/tracker_new/src/main/webapp/resources/css/style.css
@@ -296,16 +296,21 @@ hr {
 /*************************
 *******chat_dialog******
 **************************/
-#dialog div {	
+#dialog #data {	
 	width: 100%;
 	height: 200px;
-	border: 1px solid gray;	
+	border: 1px solid #A9A9A9;	
 	overflow: auto;
 }
 
 #dialog input {	
-	margin-top:20px;
-	width:80%;
+	margin-top: 10px;
+	width: 74%;
+}
+
+#dialog img {	
+	margin-bottom: 2px;	
+	margin-left: 1px;
 }
 
 /*************************
