--- a/tracker_new/src/main/webapp/resources/css/style.css
+++ b/tracker_new/src/main/webapp/resources/css/style.css
@@ -313,6 +313,17 @@ hr {
 	margin-left: 1px;
 }
 
+
+/*************************
+*******feature******
+**************************/
+#managemember {
+	padding-top:50px;
+	background:#fff;
+	padding-bottom:50px;
+}
+
+
 /*************************
 *******feature******
 **************************/
@@ -1167,4 +1178,89 @@ xsigin/signup popup
 
 #cd-login.is-selected, #cd-signup.is-selected, #cd-reset-password.is-selected {
   display: block;
+}
+
+/* -------------------------------- 
+
+CSSTableGenerator 
+
+-------------------------------- */
+.CSSTableGenerator table {
+	border-collapse: collapse;	
+	border-spacing: 0;
+	width: 85%;
+	height: 850%;	
+	margin : 0 auto;
+	padding: 0px;
+}
+
+
+.CSSTableGenerator table tr:first-child td:first-child {
+	background:#E8E8E8 ;
+	color:black;
+	-moz-border-radius-topleft: 14px;
+	-webkit-border-top-left-radius: 14px;
+	border-top-left-radius: 14px;
+}
+
+.CSSTableGenerator table tr:first-child td:last-child {
+	background:#E8E8E8 ;
+	color:black;
+	-moz-border-radius-topright: 14px;
+	-webkit-border-top-right-radius: 14px;
+	border-top-right-radius: 14px;
+}
+
+.CSSTableGenerator tr:last-child td:first-child {
+	-moz-border-radius-bottomleft: 14px;
+	-webkit-border-bottom-left-radius: 14px;
+	border-bottom-left-radius: 14px;
+}
+
+.CSSTableGenerator tr:hover td {
+	background-color: #ffffff;
+}
+
+.CSSTableGenerator td {
+	vertical-align: middle;
+	background-color: #aad4ff;
+	border: 1px solid #000000;
+	border-width: 0px 1px 1px 0px;
+	text-align: left;
+	padding: 7px;
+	font-size: 15px;
+	font-family: Arial;
+	font-weight: normal;
+	color: #000000;
+}
+
+.CSSTableGenerator tr:last-child td {
+	border-width: 0px 1px 0px 0px;
+}
+
+.CSSTableGenerator tr td:last-child {
+	border-width: 0px 0px 1px 0px;
+}
+
+.CSSTableGenerator tr:last-child td:last-child {
+	border-width: 0px 0px 0px 0px;
+}
+
+.CSSTableGenerator tr:first-child td {
+	background-color: #E8E8E8;
+	border: 0px solid #000000;
+	text-align: center;
+	border-width: 0px 0px 1px 1px;
+	font-size: 14px;
+	font-family: Helvetica;
+	font-weight: bold;
+	color: black;
+}
+
+.CSSTableGenerator tr:first-child td:first-child {
+	border-width: 0px 0px 1px 0px;
+}
+
+.CSSTableGenerator tr:first-child td:last-child {
+	border-width: 0px 0px 1px 1px;
 }
