sytle.css update

--- a/tracker_new/src/main/webapp/resources/css/style.css
+++ b/tracker_new/src/main/webapp/resources/css/style.css
@@ -323,6 +323,10 @@ hr {
 	padding-bottom:50px;
 }
 
+.cd-switcher li{
+	list-style : none;
+}
+
 /*************************
 *******support******
 **************************/
